Revert "padding fix on index on mobile"
This reverts commit acb9e6c3901c158ed478091b0967f78421ff3e1b.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -88,7 +88,3 @@
             padding-right: 0;
         }
 }
-
-@media screen and (max-width: 768px) {
-    .desktop {display: none;}  
-}
